--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: msir
 Type: Package
-Version: 1.0
+Version: 1.1
+Date: 2012-05-29
 Title: Model-based Sliced Inverse Regression
-Date: 2011-05-09
 Author: Luca Scrucca <luca@stat.unipg.it>
 Maintainer: Luca Scrucca <luca@stat.unipg.it>
-Description: An R package for dimension reduction based on Gaussian
-        finite mixture models as an extension to sliced inverse
-        regression (SIR).
-Depends: R (>= 2.12), mclust, rgl
+Description: An R package for dimension reduction based on finite
+        Gaussian mixture modeling of inverse regression.
+Depends: R (>= 2.14), mclust, rgl, MASS
 License: GPL (>= 2)
-LazyLoad: yes
-Packaged: 2011-05-09 16:51:15 UTC; luca
 Repository: CRAN
-Date/Publication: 2011-05-10 04:00:00
+ByteCompile: true
+LazyLoad: yes
+Packaged: 2012-05-29 21:14:24 UTC; luca
+Date/Publication: 2012-05-30 07:22:15
