--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: msir
 Type: Package
-Version: 1.2
-Date: 2012-08-10
+Version: 1.3
+Date: 2014-02-23
 Title: Model-based Sliced Inverse Regression
+Description: An R package for dimension reduction based on finite Gaussian mixture modeling of inverse regression.
 Author: Luca Scrucca <luca@stat.unipg.it>
 Maintainer: Luca Scrucca <luca@stat.unipg.it>
-Description: An R package for dimension reduction based on finite
-        Gaussian mixture modeling of inverse regression.
-Depends: R (>= 2.14), mclust, rgl, MASS
+Depends: R (>= 2.15)
+Imports: mclust (>= 4.2)
+Suggests: rgl
 License: GPL (>= 2)
 Repository: CRAN
 ByteCompile: true
 LazyLoad: yes
-Packaged: 2012-08-10 16:17:27 UTC; luca
-Date/Publication: 2012-08-10 16:50:52
+Packaged: 2014-02-24 10:07:42 UTC; luca
+NeedsCompilation: no
+Date/Publication: 2014-02-24 11:22:32
